# chromium-tools

./: .gitignore  MANIFEST.in  bump-gn.sh  bump_chrome.py  chrome-bump  chromium-depot-tool  chromium_licence_mappings.yaml  chromium_tools.py  edge-bump  extract-cves.py  generate-libaom-test-tarball.sh  generate-libvpx-test-tarball.sh  get-chromium-licences.py  get-chromium-toolchain-strings.py  get-edge-cves.py  get-electron-toolchain-strings.py  get-opera-version-mapping.py  get_chromium_toolchain_strings.sh  iterate-over-ebuild.sh  make-golang-vendor.bashlib  opera-bump  package-beta.sh  package-chromium-ffmpeg.py  package-stable.sh  setup.py  sqlite-vacuum.py  v8-create-tarball  v8-extract-version  vendor-app-builder  vendor-common.bashlib  vendor-electron  vendor-electron-builder  vendor-esbuild  vendor-node-modules.bashlib  vendor-vesktop
chromicler/: .gitignore  README.md  bugzilla_client.py  bump_utils.py  chromicler.py  ebuild_manager.py  pyproject.toml  version_utils.py
chromicler/handlers/: chromium_handler.py  edge_handler.py  opera_handler.py  vivaldi_handler.py
chromicler/test/: __init__.py  conftest.py  test_bugzilla_client.py  test_bump_utils.py  test_ebuild_manager.py  test_version_utils.py
chromicler/test/chromium/: __init__.py  conftest.py  test_chromium.py  test_chromium_bump.py
chromicler/test/data/: chrome_release_2025_09_17.html  chrome_releases_blog_index_sample.html  edge_cvrf_2025_sep.xml  larry_bugzilla_text  opera_changelog.html  opera_security.rss
chromicler/test/edge/: __init__.py  conftest.py  test_edge.py  test_edge_bump.py
chromicler/test/opera/: __init__.py  conftest.py  test_opera_additional.py  test_opera_bump.py  test_opera_changelog.py  test_opera_dry_run.py  test_opera_mapping.py  test_opera_rss.py  test_opera_update_mapping.py
scripts/: chromium-depot-tool  v8-create-tarball
